k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: getmentor
  labels:
    name: getmentor
